Update movie handler
